--- a/app/src/accent/res/values/colors.xml
+++ b/app/src/accent/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#98FB98</color>
-    <color name="colorPrimaryDark">#3CB371</color>
+    <color name="colorPrimary">#8FBC8F</color>
+    <color name="colorPrimaryDark">#008B8B</color>
     <color name="colorAccent">#FF1493</color>
 </resources>
